@@ -1,10 +1,8 @@
 package edu.java.bot.exceptions;
 
 import edu.java.bot.dto.api.ApiErrorResponse;
-import edu.java.bot.exceptions.custom.ChatIdNotFoundException;
-import edu.java.bot.exceptions.custom.CustomApiException;
-import edu.java.bot.exceptions.custom.LinkNotFoundException;
 import java.util.Arrays;
+import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -13,20 +11,6 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
-    @ExceptionHandler({ChatIdNotFoundException.class, LinkNotFoundException.class})
-    @ResponseStatus(value = HttpStatus.NOT_FOUND)
-    public ApiErrorResponse handleNotFoundException(CustomApiException e) {
-        return new ApiErrorResponse(
-            e.getDescription(),
-            e.getHttpStatus().toString(),
-            e.getClass().getSimpleName(),
-            e.getMessage(),
-            Arrays.stream(e.getStackTrace())
-                .map(StackTraceElement::toString)
-                .toList()
-        );
-    }
-
     @ExceptionHandler
     @ResponseStatus(value = HttpStatus.BAD_REQUEST)
     public ApiErrorResponse handleBadRequestException(MethodArgumentNotValidException e) {
@@ -37,7 +21,7 @@ public class GlobalExceptionHandler {
             e.getMessage(),
             Arrays.stream(e.getStackTrace())
                 .map(StackTraceElement::toString)
-                .toList()
+                .collect(Collectors.toList())
         );
     }
 }
